// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates extensions for iOS 1`] = `
Array [
  ".ios.ts",
  ".native.ts",
  ".ts",
  ".ios.tsx",
  ".native.tsx",
  ".tsx",
  ".ios.js",
  ".native.js",
  ".js",
  ".ios.jsx",
  ".native.jsx",
  ".jsx",
  ".json",
]
`;

exports[`creates extensions for web 1`] = `
Array [
  ".web.ts",
  ".ts",
  ".web.tsx",
  ".tsx",
  ".web.js",
  ".js",
  ".web.jsx",
  ".jsx",
  ".json",
]
`;
